--- a/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
+++ b/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
@@ -1,1 +1,16 @@
-﻿
+﻿<html>
+<head>
+    <link href="~/Stylesheet.css" rel="stylesheet" />
+</head>
+<body>
+    <form method="post">
+        <label for="Year">From Year</label>
+        <input id="year" name="year" />
+    </form>
+
+    <form method="post">
+        <label for="Year">From Year</label>
+        <input id="year" name="year" />
+    </form>
+</body>
+</html>
