--- a/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
+++ b/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
@@ -13,11 +13,11 @@
     <p2>Enter a year range to find out who Time's Person of the Year was from 1927-2016</p2>
 
     <form method="post">
-        <label for="Year">From Year</label>
-        <input maxlength="4" placeholder="YYYY" name="year" />
+        <label for="fromYear">From Year</label>
+        <input maxlength="4" placeholder="YYYY" name="fromYear" />
    
-        <label for="Year">To Year</label>
-        <input maxlength="4" placeholder="YYYY" name="year" />
+        <label for="toYear">To Year</label>
+        <input maxlength="4" placeholder="YYYY" name="toYear" />
 
         <button type="submit">Submit</button>
     </form>
