Ugh! Naming Conventions, For real tho!

--- a/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
+++ b/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿<html>
 <head>
     <link href="~/Stylesheet.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
 </head>
 <body>
 
