Styling but not Profiling

--- a/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
+++ b/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
     <p1>Electronic Time Capsule.</p1> 
     <p2>Enter a year range to find out who Time's Person of the Year was from 1927-2016</p2>
 
+    <div id="form">
     <form method="post">
         <label for="fromYear">From Year</label>
         <input maxlength="4" placeholder="YYYY" name="fromYear" />
@@ -22,6 +23,7 @@
 
         <button type="submit">Submit</button>
     </form>
+    </div>
 
 </body>
 </html>
