--- a/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Result.cshtml
+++ b/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Result.cshtml
@@ -5,7 +5,7 @@
 
 
 @*Table data and table rows circa salmon cookies, don't forget to refernce the model folder for table to render. Helpful to make list from Models/TimePerson to keep track of list data; don't forget item. when you're tire!*@
-<table>
+<table class="center">
 
 
     @foreach (var item in Model)
