--- a/Intro_MVC_Core/Intro_MVC_Core/wwwroot/StyleSheet.css
+++ b/Intro_MVC_Core/Intro_MVC_Core/wwwroot/StyleSheet.css
@@ -1,3 +1,38 @@
-﻿body {
-    background-color:azure;
+﻿* {
+    font-family: 'PT Serif', serif;
+}
+body {
+    background-color: whitesmoke;
+}
+
+h1 {
+    margin-top: 10em;
+    text-align: center;
+    
+}
+
+h2 {
+    text-align: center;
+}
+
+.p1 {
+    text-align: center;
+}
+
+.p2 {
+    text-align: center;
+}
+
+#form {
+    display: block;
+}
+
+th, td, tr {
+    border: 1em solid black;
+    font-family: 'PT Serif', serif;
+}
+
+table.center {
+    margin-left: auto;
+    margin-right: auto;
 }
