--- a/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
+++ b/Intro_MVC_Core/Intro_MVC_Core/Views/Home/Index.cshtml
@@ -6,24 +6,32 @@
 <body>
 
     <header>
-        <h1>Time</h1>
-        <h2>Person of the Year</h2>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </header>
 
-    <p1>Electronic Time Capsule.</p1> 
-    <p2>Enter a year range to find out who Time's Person of the Year was from 1927-2016</p2>
-
-    <div id="form">
-    <form method="post">
-        <label for="fromYear">From Year</label>
-        <input maxlength="4" placeholder="YYYY" name="fromYear" />
-   
-        <label for="toYear">To Year</label>
-        <input maxlength="4" placeholder="YYYY" name="toYear" />
-
-        <button type="submit">Submit</button>
-    </form>
+    <div class="container">
+        <img src="~/TIME.png" alt="Time Cover" class="image-responsive" />
+        <div class="centered">Electronic Time Capsule</div>
+        <div class="centered2">Time's Person of the Year 1927-2016</div>
+        <div class="centered3">
+            <form method="post">
+                <label for="fromYear">From Year</label>
+                <input maxlength="4" placeholder="YYYY" name="fromYear" />
+            </form>
+        </div>
+        <div class="centered4">
+            <form method="post">
+                <label for="toYear">To Year</label>
+                <input maxlength="4" placeholder="YYYY" name="toYear" />
+            </form>
+        </div>
     </div>
+    
+        <div class="form">
+            <form method="post">
+            <button type="submit">Submit</button>
+            </form>
+        </div>
 
 </body>
 </html>
