--- a/Intro_MVC_Core/Intro_MVC_Core/wwwroot/StyleSheet.css
+++ b/Intro_MVC_Core/Intro_MVC_Core/wwwroot/StyleSheet.css
@@ -5,23 +5,46 @@ body {
     background-color: whitesmoke;
 }
 
-h1 {
-    margin-top: 10em;
+.container {
+    position: relative;
     text-align: center;
-    
+    color: black;
+    margin-top: 3em;
 }
 
-h2 {
-    text-align: center;
+.centered {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.p1 {
-    text-align: center;
+.centered2 {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.p2 {
-    text-align: center;
+.centered3 {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+.centered4 {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align:center;
+}
+
+.form {
+    margin-left: 50%;
+    margin-top: 1em;
+  }
 
 #form {
     display: block;
